[BE] Feat: 음식 즐겨찾기 반환 DTO List -> Detail